<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    app:layout_scrollFlags="scroll|exitUntilCollapsed"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPost"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/post_your_twitter"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="#757575"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/Send"
                app:srcCompat="@android:drawable/ic_menu_send" />

            <ImageButton
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/gallery"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>